<resources>
    <string name="app_name">CovidTrackerApp</string>
    <string name="deaths">Deaths</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="state">State</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_month">1 Month</string>
    <string name="max">Max</string>
    <string name="app_discription">COVID-TRACKER</string>
</resources>